--- a/index.html
+++ b/index.html
@@ -416,8 +416,9 @@
                     <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo">
                 </picture>
 
-                <!-- Density switching
-                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" class="footer__logo"> -->
+            <!--
+                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" class="footer__logo">
+            -->
             </div>
             <div class="row">
                 <!-- navigation -->
