--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
         <!-- icon -->
         <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
-        <!-- style -->
-        <link rel="stylesheet" href="css/style.css">
         <!-- logo -->
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+        <!-- style -->
+        <link rel="stylesheet" href="css/style.css">
+        <!-- javascript -->
+        <script defer src="js/script.js"></script>
         
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
@@ -30,19 +32,19 @@
             <nav class="navigation__nav">
                 <ul class="navigation__list">
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link"><span>01</span>About Natours</a>
+                        <a href="#section-about" class="navigation__link"><span>01</span>About Natours</a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link"><span>02</span>Your benefits</a>
+                        <a href="#section-features" class="navigation__link"><span>02</span>Your benefits</a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link"><span>03</span>Popular tours</a>
+                        <a href="#section-tours" class="navigation__link"><span>03</span>Popular tours</a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link"><span>04</span>Stories</a>
+                        <a href="#section-stories" class="navigation__link"><span>04</span>Stories</a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#" class="navigation__link"><span>05</span>Book now</a>
+                        <a href="#section-book" class="navigation__link"><span>05</span>Book now</a>
                     </li>
                 </ul>
             </nav>
@@ -67,7 +69,7 @@
         <!-- main -->
         <main>
             <!-- section about -->
-            <section class="section-about">
+            <section class="section-about" id="section-about">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Exciting tours for adventurous people
@@ -122,7 +124,7 @@
             </section>
 
             <!-- section features -->
-            <section class="section-features">
+            <section class="section-features" id="section-features">
                 <div class="row">
                     <div class="col-1-of-4">
                         <div class="feature-box">
@@ -287,7 +289,7 @@
             </section>
 
             <!-- section stories -->
-            <section class="section-stories">
+            <section class="section-stories" id="section-stories">
                 <div class="bg-video">
                     <video class="bg-video__content" autoplay muted loop>
                         <source src="img/video.mp4" type="video/mp4">
@@ -356,7 +358,7 @@
             </section>
 
             <!-- section book -->
-            <section class="section-book">
+            <section class="section-book" id="section-book">
                 <div class="row">
                     <div class="book">
                         <div class="book__form">
@@ -480,7 +482,7 @@
                     <p class="popup__text">
                         Nostrud anim Lorem ipsum cillum in. Exercitation pariatur aute do dolor officia do excepteur velit quis consequat exercitation reprehenderit exercitation laborum. Reprehenderit sunt tempor Lorem occaecat Lorem excepteur dolor excepteur qui magna elit. Occaecat et non velit cupidatat consequat officia sint commodo Lorem commodo anim consectetur minim nisi.
                     </p>
-                    <a href="#" class="btn btn--green">Book now</a>
+                    <a href="#section-book" class="btn btn--green">Book now</a>
                 </div>
             </div>
         </div>
