Add Scroll functionality

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
         <!-- icon -->
         <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
-        <!-- logo -->
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         <!-- style -->
         <link rel="stylesheet" href="css/style.css">
+        <!-- logo -->
+        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         <!-- javascript -->
         <script defer src="js/script.js"></script>
         
@@ -32,19 +32,19 @@
             <nav class="navigation__nav">
                 <ul class="navigation__list">
                     <li class="navigation__item">
-                        <a href="#section-about" class="navigation__link"><span>01</span>About Natours</a>
+                        <a href="#section-about" class="navigation__link navigation__link-about"><span>01</span>About Natours</a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#section-features" class="navigation__link"><span>02</span>Your benefits</a>
+                        <a href="#section-features" class="navigation__link navigation__link-benefits"><span>02</span>Your benefits</a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#section-tours" class="navigation__link"><span>03</span>Popular tours</a>
+                        <a href="#section-tours" class="navigation__link navigation__link-tours"><span>03</span>Popular tours</a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#section-stories" class="navigation__link"><span>04</span>Stories</a>
+                        <a href="#section-stories" class="navigation__link navigation__link-Stories"><span>04</span>Stories</a>
                     </li>
                     <li class="navigation__item">
-                        <a href="#section-book" class="navigation__link"><span>05</span>Book now</a>
+                        <a href="#section-book" class="navigation__link navigation__link-book"><span>05</span>Book now</a>
                     </li>
                 </ul>
             </nav>
@@ -62,7 +62,7 @@
                     <span class="heading-primary--sub">is where life happens</span>
                 </h1>
 
-                <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
+                <a href="" class="btn btn--white btn--animated btn--scroll-tours">Discover our tours</a>
             </div>
         </header>
 
@@ -172,7 +172,7 @@
             <section class="section-tours" id="section-tours">
                 <!-- header -->
                 <div class="u-center-text u-margin-bottom-big">
-                    <h2 class="heading-secondary">
+                    <h2 class="heading-secondary tours">
                         Most popular tours
                     </h2>
                 </div>
@@ -282,7 +282,7 @@
 
                 <!-- button -->
                 <div class="u-center-text u-margin-top-huge">
-                    <a href="#" class="btn btn--green">
+                    <a href="" class="btn btn--green">
                         Discover all tours
                     </a>
                 </div>
@@ -482,7 +482,7 @@
                     <p class="popup__text">
                         Nostrud anim Lorem ipsum cillum in. Exercitation pariatur aute do dolor officia do excepteur velit quis consequat exercitation reprehenderit exercitation laborum. Reprehenderit sunt tempor Lorem occaecat Lorem excepteur dolor excepteur qui magna elit. Occaecat et non velit cupidatat consequat officia sint commodo Lorem commodo anim consectetur minim nisi.
                     </p>
-                    <a href="#section-book" class="btn btn--green">Book now</a>
+                    <a href="#" class="btn btn--green btn--scroll-book-now">Book now</a>
                 </div>
             </div>
         </div>
